--- a/package.json
+++ b/package.json
@@ -36,29 +36,30 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.22.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^12.1.2",
     "@types/jest": "^29.5.2",
     "@types/react": "^18.2.12",
     "@types/react-native": "^0.72.2",
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.1.3",
     "eslint": "^7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^27.1.3",
+    "jest-expo": "^48.0.2",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "^29.1.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "^27.1.3",
     "typescript": "^5.1.3"
   },
   "jest": {
     "preset": "react-native",
-    "testEnvironmentOptions": {
-      "mocking": true,
-      "exampleOption": "value"
-    },
+    "testEnvironment": "node",
     "moduleFileExtensions": [
       "ts",
       "tsx",
